
Small changes:
  * Add a synthetic energy efficiency testcase.

StarPU 1.3.8
====================================================================

Small features:
  * A codelet can now define a callback function pointer which will be
    automatically called when the task does not define itself a
    callback function, in that case, it can still be called from the
    task callback function.
  * New STARPU_WORKERS_COREID environment variable to bind workers to cores
    instead of hyperthreads.

StarPU 1.3.7
====================================================================

Small changes:
  * Simgrid: bug fix for setting network/weight-S to 0.0

StarPU 1.3.6 (git revision fb9fbed81410d9f0ebbff5bdad1352df4705efe8)
====================================================================

Small features:
  * New STARPU_BACKOFF_MIN and STARPU_BACKOFF_MAX environment variables to the
    exponential backoff limits of the number of cycles to pause while drivers
    are spinning.
  * Add STARPU_DISPLAY_BINDINGS environment variable and
    starpu_display_bindings() function to display all bindings on the machine by
    calling hwloc-ps
  * New function starpu_get_pu_os_index() to convert logical index of a PU to
    its OS index.
  * New function starpu_get_hwloc_topology() to get the hwloc topology used by
    StarPU.

StarPU 1.3.5 (git revision 5f7458799f548026fab357b18541bb462dde2b53)
====================================================================

Small features:
  * New environment variable STARPU_FXT_SUFFIX to set the filename in
    which to save the fxt trace
  * New option -d for starpu_fxt_tool to specify in which directory to
    generate files

Small changes:
  * Move MPI cache functions into the public API
  * Add STARPU_MPI_NOBIND environment variable.

StarPU 1.3.4 (git revision c37a5d024cd997596da41f765557c58099baf896)
====================================================================

Small features: